Exported .csv File

--- a/Forecasting_Exports.ipynb
+++ b/Forecasting_Exports.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 1,
    "id": "992dff96",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
        "[300 rows x 10 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,6 +352,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "16799fdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('exports_data_prepared.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b74e116b",
    "metadata": {},
@@ -361,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 3,
    "id": "b2b0669f",
    "metadata": {},
    "outputs": [
@@ -419,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 4,
    "id": "fb652d28",
    "metadata": {},
    "outputs": [
@@ -464,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 5,
    "id": "f44a8682",
    "metadata": {},
    "outputs": [
@@ -546,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 6,
    "id": "059cea7a",
    "metadata": {},
    "outputs": [
@@ -625,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 7,
    "id": "275b2a3f",
    "metadata": {},
    "outputs": [
@@ -717,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 8,
    "id": "d499eb92",
    "metadata": {},
    "outputs": [
@@ -814,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 9,
    "id": "b827c65e",
    "metadata": {},
    "outputs": [
@@ -918,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 10,
    "id": "05e8aa86",
    "metadata": {},
    "outputs": [
@@ -1008,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 11,
    "id": "76652607",
    "metadata": {},
    "outputs": [
@@ -1095,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 12,
    "id": "bb2e0ac4",
    "metadata": {},
    "outputs": [
@@ -1217,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 13,
    "id": "a97da09f",
    "metadata": {},
    "outputs": [
@@ -1348,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 14,
    "id": "b74d04ae",
    "metadata": {},
    "outputs": [
@@ -1382,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 15,
    "id": "277d2c28",
    "metadata": {},
    "outputs": [
@@ -1411,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 16,
    "id": "251a5f1f",
    "metadata": {},
    "outputs": [
@@ -1457,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 17,
    "id": "841a104c",
    "metadata": {},
    "outputs": [
@@ -1502,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 18,
    "id": "4e3c8c4c",
    "metadata": {},
    "outputs": [
@@ -1547,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 19,
    "id": "faae4f6c",
    "metadata": {},
    "outputs": [
@@ -1571,8 +1581,8 @@
       "==============================================================================\n",
       "Dep. Variable:         value_Outgoing   No. Observations:                  288\n",
       "Model:               SARIMAX(1, 1, 1)   Log Likelihood               -4284.652\n",
-      "Date:                Sun, 18 May 2025   AIC                           8575.305\n",
-      "Time:                        14:07:16   BIC                           8586.262\n",
+      "Date:                Wed, 25 Jun 2025   AIC                           8575.305\n",
+      "Time:                        15:24:05   BIC                           8586.262\n",
       "Sample:                             0   HQIC                          8579.697\n",
       "                                - 288                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -1591,7 +1601,7 @@
       "\n",
       "Warnings:\n",
       "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n",
-      "[2] Covariance matrix is singular or near-singular, with condition number 1.27e+42. Standard errors may be unstable.\n",
+      "[2] Covariance matrix is singular or near-singular, with condition number 1.16e+42. Standard errors may be unstable.\n",
       "R^2: -0.2149\n"
      ]
     }
@@ -1668,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 20,
    "id": "b2bfd2ec",
    "metadata": {},
    "outputs": [
@@ -1692,8 +1702,8 @@
       "==============================================================================\n",
       "Dep. Variable:         value_Outgoing   No. Observations:                  288\n",
       "Model:               SARIMAX(1, 1, 0)   Log Likelihood               -4327.097\n",
-      "Date:                Sun, 18 May 2025   AIC                           8658.194\n",
-      "Time:                        14:07:16   BIC                           8665.506\n",
+      "Date:                Wed, 25 Jun 2025   AIC                           8658.194\n",
+      "Time:                        15:24:05   BIC                           8665.506\n",
       "Sample:                             0   HQIC                          8661.125\n",
       "                                - 288                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -1789,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 21,
    "id": "c4caa018",
    "metadata": {},
    "outputs": [
@@ -1813,8 +1823,8 @@
       "==========================================================================================\n",
       "Dep. Variable:                     value_Outgoing   No. Observations:                  288\n",
       "Model:             SARIMAX(1, 1, 1)x(1, 1, 1, 12)   Log Likelihood               -3885.096\n",
-      "Date:                            Sun, 18 May 2025   AIC                           7780.191\n",
-      "Time:                                    17:02:09   BIC                           7798.014\n",
+      "Date:                            Wed, 25 Jun 2025   AIC                           7780.191\n",
+      "Time:                                    15:24:05   BIC                           7798.014\n",
       "Sample:                                         0   HQIC                          7787.355\n",
       "                                            - 288                                         \n",
       "Covariance Type:                              opg                                         \n",
@@ -1835,7 +1845,7 @@
       "\n",
       "Warnings:\n",
       "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n",
-      "[2] Covariance matrix is singular or near-singular, with condition number 1.99e+41. Standard errors may be unstable.\n",
+      "[2] Covariance matrix is singular or near-singular, with condition number 3.47e+40. Standard errors may be unstable.\n",
       "R^2: 0.2055\n"
      ]
     }
@@ -1912,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 22,
    "id": "62bbbdc1",
    "metadata": {},
    "outputs": [
